feat(login): add login endpoint
- wrote tests for the endpoint
- installed cookie-parser
- implemented the endpoint

[Delivers #167733645]
