# swagger.json
@@ -109,7 +109,7 @@
               }
             }
           },
-        "/users/login": {
+        "/auth/login": {
             "post": {
                 "description": "#",
                 "summary": "#",
@@ -135,8 +135,8 @@
                     "200": {
                         "description": "Login successful"
                     },
-                    "400": {
-                        "description": "Invalid email or password"
+                    "401": {
+                        "description": "Invalid login details"
                     },
                     "500": {
                         "description": "Internal Server Error"
@@ -360,7 +360,7 @@
                     }
                 },
                 "example": {
-                    "email": "mike@example.com",
+                    "email": "efe.yusuf@andela.com",
                     "password": "password123"
                 },
                 "required": [
